tests/baselines/reference/parserFunctionDeclaration1(strict=true).errors.txt
parserFunctionDeclaration1.ts(2,3): error TS1038: A 'declare' modifier cannot be used in an already ambient context.
parserFunctionDeclaration1.ts(2,20): error TS7010: 'F', which lacks return-type annotation, implicitly has an 'any' return type.


==== parserFunctionDeclaration1.ts (2 errors) ====
    declare module M {
      declare function F();
      ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
                       ~
!!! error TS7010: 'F', which lacks return-type annotation, implicitly has an 'any' return type.
    }